--- a/wiki/Commands.wiki
+++ b/wiki/Commands.wiki
@@ -56,12 +56,17 @@ Set volume level, in dB.
 Change volume level by given delta, in db.
   * param1=signed delta, -N...N (-N/10...N/10 db)
 
-=== `Seek` ===
+=== `SeekPercent` ===
 
 Seek playing item, by percent.
   * param1=position, from 0 to 100
 
-=== `SeekDelta` ===
+=== `SeekSecond` ===
+
+Seek playing item, in seconds
+  * param1=position
+
+=== `SeekSecondDelta` ===
 
 Seek playing item by given delta, in seconds
   * param1=signed delta
